--- a/MNIST/MNIST.ipynb
+++ b/MNIST/MNIST.ipynb
@@ -262,7 +262,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 492
+          "height": 512
         },
         "outputId": "ca14ed47-b1bd-4e16-b9c1-f976b4298031"
       },
@@ -413,14 +413,79 @@
       "metadata": {
         "id": "SA1wK25RY83T",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 512
+        },
+        "outputId": "2cce71f5-043e-4586-daaf-e1d4fa268192"
       },
       "cell_type": "code",
       "source": [
-        ""
+        "model = None\n",
+        "model = Sequential() \n",
+        "#layers order http://cs231n.github.io/convolutional-networks/#layerpat\n",
+        "\n",
+        "model.add(Conv2D(filters=100, kernel_size=3, activation='relu'))\n",
+        "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
+        "\n",
+        "model.add(Conv2D(filters=100, kernel_size=3, activation='relu'))\n",
+        "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "model.add(Flatten())\n",
+        "model.add(Dense(num_classes, activation='softmax'))\n",
+        "\n",
+        "model.compile(loss=keras.losses.categorical_crossentropy,\n",
+        "              optimizer=keras.optimizers.Adadelta(),\n",
+        "              metrics=['accuracy'])\n",
+        "\n",
+        "model.fit(x_train, y_train,\n",
+        "          batch_size=batch_size,\n",
+        "          epochs=epochs,\n",
+        "          verbose=1,\n",
+        "          validation_data=(x_test, y_test))\n",
+        "score = model.evaluate(x_test, y_test, verbose=0)\n",
+        "print('Test loss:', score[0])\n",
+        "print('Test accuracy:', score[1])"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Train on 60000 samples, validate on 10000 samples\n",
+            "Epoch 1/12\n",
+            "60000/60000 [==============================] - 9s 148us/step - loss: 0.2164 - acc: 0.9331 - val_loss: 0.0648 - val_acc: 0.9799\n",
+            "Epoch 2/12\n",
+            "60000/60000 [==============================] - 8s 135us/step - loss: 0.0639 - acc: 0.9805 - val_loss: 0.0445 - val_acc: 0.9859\n",
+            "Epoch 3/12\n",
+            "60000/60000 [==============================] - 8s 136us/step - loss: 0.0470 - acc: 0.9857 - val_loss: 0.0483 - val_acc: 0.9841\n",
+            "Epoch 4/12\n",
+            "60000/60000 [==============================] - 8s 135us/step - loss: 0.0380 - acc: 0.9881 - val_loss: 0.0358 - val_acc: 0.9895\n",
+            "Epoch 5/12\n",
+            "60000/60000 [==============================] - 8s 135us/step - loss: 0.0320 - acc: 0.9898 - val_loss: 0.0320 - val_acc: 0.9893\n",
+            "Epoch 6/12\n",
+            "60000/60000 [==============================] - 8s 136us/step - loss: 0.0275 - acc: 0.9915 - val_loss: 0.0301 - val_acc: 0.9897\n",
+            "Epoch 7/12\n",
+            "60000/60000 [==============================] - 8s 135us/step - loss: 0.0239 - acc: 0.9925 - val_loss: 0.0287 - val_acc: 0.9904\n",
+            "Epoch 8/12\n",
+            "60000/60000 [==============================] - 8s 135us/step - loss: 0.0204 - acc: 0.9935 - val_loss: 0.0297 - val_acc: 0.9904\n",
+            "Epoch 9/12\n",
+            "60000/60000 [==============================] - 8s 136us/step - loss: 0.0178 - acc: 0.9946 - val_loss: 0.0333 - val_acc: 0.9896\n",
+            "Epoch 10/12\n",
+            "60000/60000 [==============================] - 8s 135us/step - loss: 0.0153 - acc: 0.9954 - val_loss: 0.0315 - val_acc: 0.9902\n",
+            "Epoch 11/12\n",
+            "60000/60000 [==============================] - 8s 136us/step - loss: 0.0134 - acc: 0.9960 - val_loss: 0.0281 - val_acc: 0.9914\n",
+            "Epoch 12/12\n",
+            "60000/60000 [==============================] - 8s 136us/step - loss: 0.0117 - acc: 0.9966 - val_loss: 0.0305 - val_acc: 0.9901\n",
+            "Test loss: 0.030517288568560615\n",
+            "Test accuracy: 0.9901\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
