--- a/Kaggle/students-performance-in-exams/students-performance-in-exams.ipynb
+++ b/Kaggle/students-performance-in-exams/students-performance-in-exams.ipynb
@@ -2147,7 +2147,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "best_model = XGBRegressor(**rand_search.best_params_)\n",
+    "best_model.fit(train_math, y_train_math)\n",
+    "\n",
+    "y_preds = best_model.predict(test_math)\n",
+    "print(\"RMSE: \",np.sqrt(mean_squared_error(y_test_math,y_preds)))\n",
+    "print(rand_search.best_params_)"
+   ]
   },
   {
    "cell_type": "code",
