--- a/Data Science-Datasets/pima indians diabetes dataset/Diabetes Prediction.ipynb
+++ b/Data Science-Datasets/pima indians diabetes dataset/Diabetes Prediction.ipynb
@@ -30,9 +30,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\kali\\Anaconda3\\envs\\idp3\\lib\\site-packages\\sklearn\\externals\\six.py:31: DeprecationWarning: The module is deprecated in version 0.21 and will be removed in version 0.23 since we've dropped support for Python 2.7. Please rely on the official version of six (https://pypi.org/project/six/).\n",
+      "  \"(https://pypi.org/project/six/).\", DeprecationWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import scipy \n",
@@ -53,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -68,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +173,7 @@
        "4         5      116  74     0        0  25.6     0.201   30      0"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +329,7 @@
        "max      2.420000   81.000000    1.000000  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +499,7 @@
        "label     0.173245  0.236417  1.000000  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -528,14 +537,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.7291666666666666\n"
+      "Accuracy: 0.71875\n"
      ]
     }
    ],
@@ -556,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -639,14 +648,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.7291666666666666\n"
+      "Accuracy: 0.75\n"
      ]
     },
     {
@@ -673,14 +682,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.7447916666666666\n"
+      "Accuracy: 0.7291666666666666\n"
      ]
     },
     {
@@ -707,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -735,14 +744,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.7239583333333334\n"
+      "Accuracy: 0.7708333333333334\n"
      ]
     },
     {
@@ -770,14 +779,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.7447916666666666\n"
+      "Accuracy: 0.7395833333333334\n"
      ]
     }
    ],
@@ -806,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -820,10 +829,10 @@
     {
      "data": {
       "text/plain": [
-       "0.75"
+       "0.765625"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -831,10 +840,13 @@
    "source": [
     "from sklearn.ensemble import VotingClassifier\n",
     "from sklearn.naive_bayes import GaussianNB,BernoulliNB,BaseDiscreteNB,ComplementNB,MultinomialNB\n",
+    "#double include \n",
+    "from sklearn.svm import SVC,SVR,LinearSVR,LinearSVC\n",
     "\n",
-    "alg1 = ExtraTreesClassifier()\n",
+    "alg1 = RandomForestClassifier(criterion='entropy',max_depth=5) #ExtraTreesClassifier()\n",
     "alg2 = GradientBoostingClassifier()\n",
-    "alg3 = GaussianNB()\n",
+    "alg3 = SVC(kernel = 'linear', random_state=0)\n",
+    " # original .76\n",
     "\n",
     "eAlg = VotingClassifier(estimators=[('LR',alg1),('GB',alg2),('NB',alg3)],\n",
     "                        voting='hard',\n",
@@ -854,14 +866,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BEST: i: 14, Accuracy: 0.7662337662337663\n"
+      "BEST: i: 4, Accuracy: 0.75\n"
      ]
     }
    ],
@@ -911,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -934,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -944,7 +956,7 @@
        "       [ 32,  32]], dtype=int64)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -957,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -966,7 +978,7 @@
        "0.7708333333333334"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -979,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -988,7 +1000,7 @@
        "0.7135416666666666"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1004,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1013,7 +1025,7 @@
        "0.7135416666666666"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1029,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1046,7 +1058,7 @@
        "0.7604166666666666"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1075,16 +1087,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.30, random_state=1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7395833333333334"
+       "0.7662337662337663"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1099,16 +1122,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7447916666666666"
+       "0.670995670995671"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1124,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1133,7 +1156,7 @@
        "0.5887445887445888"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1148,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1157,7 +1180,7 @@
        "0.5974025974025974"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1173,7 +1196,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\n"
@@ -1252,7 +1277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1260,13 +1285,13 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: keras in c:\\users\\kali\\anaconda3\\envs\\idp3\\lib\\site-packages\n",
-      "Requirement already satisfied: numpy>=1.9.1 in c:\\users\\kali\\anaconda3\\envs\\idp3\\lib\\site-packages (from keras)\n",
+      "Requirement already satisfied: pyyaml in c:\\users\\kali\\anaconda3\\envs\\idp3\\lib\\site-packages (from keras)\n",
       "Requirement already satisfied: keras-applications>=1.0.6 in c:\\users\\kali\\anaconda3\\envs\\idp3\\lib\\site-packages (from keras)\n",
-      "Requirement already satisfied: scipy>=0.14 in c:\\users\\kali\\anaconda3\\envs\\idp3\\lib\\site-packages (from keras)\n",
       "Requirement already satisfied: h5py in c:\\users\\kali\\anaconda3\\envs\\idp3\\lib\\site-packages (from keras)\n",
       "Requirement already satisfied: six>=1.9.0 in c:\\users\\kali\\anaconda3\\envs\\idp3\\lib\\site-packages (from keras)\n",
+      "Requirement already satisfied: numpy>=1.9.1 in c:\\users\\kali\\anaconda3\\envs\\idp3\\lib\\site-packages (from keras)\n",
       "Requirement already satisfied: keras-preprocessing>=1.0.5 in c:\\users\\kali\\anaconda3\\envs\\idp3\\lib\\site-packages (from keras)\n",
-      "Requirement already satisfied: pyyaml in c:\\users\\kali\\anaconda3\\envs\\idp3\\lib\\site-packages (from keras)\n"
+      "Requirement already satisfied: scipy>=0.14 in c:\\users\\kali\\anaconda3\\envs\\idp3\\lib\\site-packages (from keras)\n"
      ]
     },
     {
@@ -1352,21 +1377,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'Normalizer' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-45-6e4127227eab>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mX_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mX_test\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_test\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtest_size\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0.30\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrandom_state\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# 70% training and 30% test\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mnl\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mNormalizer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mnl\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mX_train\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnl\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mX_dev\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mX_test\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_dev\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_test\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_test\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtest_size\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0.5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrandom_state\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'Normalizer' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.30, random_state=1) # 70% training and 30% test\n",
     "nl = Normalizer()\n",
@@ -1380,7 +1393,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def nn():\n",
@@ -1407,7 +1422,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model.compile(loss='binary_crossentropy', optimizer=Adam(), metrics=['accuracy'])\n"
