--- a/Data Science-Datasets/pima indians diabetes dataset/Diabetes_Prediction_cleaned_up_data.ipynb
+++ b/Data Science-Datasets/pima indians diabetes dataset/Diabetes_Prediction_cleaned_up_data.ipynb
@@ -2623,41 +2623,13 @@
       "metadata": {
         "id": "m9e9g4T-7yNm",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 368
-        },
-        "outputId": "1a45970f-656e-4656-8450-cd594be4476f"
+        "colab": {}
       },
       "source": [
-        "!pip install quantopian\n",
-        "from quantopian.pipeline.data.quandl import cboe_vix\n"
+        ""
       ],
-      "execution_count": 30,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Collecting quantopian\n",
-            "\u001b[31m  ERROR: Could not find a version that satisfies the requirement quantopian (from versions: none)\u001b[0m\n",
-            "\u001b[31mERROR: No matching distribution found for quantopian\u001b[0m\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "error",
-          "ename": "ModuleNotFoundError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-30-68de6892b4df>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msystem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'pip install quantopian'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mquantopian\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpipeline\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mquandl\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcboe_vix\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'quantopian'",
-            "",
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
-          ]
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
